Fix margin layout bug

--- a/dev/static/styles/modules/index/feedback.sass
+++ b/dev/static/styles/modules/index/feedback.sass
@@ -11,6 +11,8 @@
         background-color: $grey
         padding: 60px 30px
         +row-flex()
+        margin-left: 0
+        margin-right: 0
     &__desc
         +col()
         +size(9)
