--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -93,6 +93,8 @@
         padding: 40px 30px
         color: $white
         +row-flex()
+        margin-left: 0
+        margin-right: 0
     &__text
         +col()
         +size(5)
