--- a/dev/static/styles/modules/topcases.sass
+++ b/dev/static/styles/modules/topcases.sass
@@ -2,6 +2,8 @@
 
 .topcases__tabs
     +row-flex()
+    margin-left: -10px
+    margin-right: -10px
 
 .topcases__tab
     +col()
@@ -57,6 +59,8 @@
 
 .topcases__cards
     +row-flex()
+    margin-left: -10px
+    margin-right: -10px
 
 .topcases-card
     display: none
