--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -1,8 +1,8 @@
 @import 'utils/vars'
 @import 'utils/animations'
-@import 'utils/grid'
 @import 'utils/mixins'
 @import 'utils/fonts'
+@import 'utils/grid'
 
 html
     font-size: $base-font-size
@@ -52,8 +52,8 @@ h2,
 h3,
 h4,
 p,
-ul[class],
-ol[class],
+ul,
+ol,
 li,
 figure,
 figcaption,
